--- a/src/app/flights/pages/flight-list-page/flight-list-page.component.html
+++ b/src/app/flights/pages/flight-list-page/flight-list-page.component.html
@@ -1,23 +1,31 @@
 <div class="flight-list-container">
   <div class="flight-list-layout">
     <aside class="filters-section">
-      <app-flight-filters></app-flight-filters>
+      @if(dataLoaded) {
+      <app-flight-filters
+        [minPrice]="minPrice"
+        [maxPrice]="maxPrice"
+        (filtersChange)="onFiltersChange($event)"
+      ></app-flight-filters>
+      }
     </aside>
 
     <section class="results-section">
       <div class="flight-cards">
-        @for(item of flights.slice(0,4); track item) {
+        @for(item of filteredFlights.slice(0, visibleCount); track item) {
         <app-flight-card [flight]="item"></app-flight-card>
         }
       </div>
 
       <div class="show-more-wrapper">
+        @if(!allFlightsShown) {
         <button
           pButton
           label="Show more"
           class="w-full !bg-white !text-[#0A1D3D] !border-[#E2E0E3] !rounded-lg"
           (click)="onShowMore()"
         ></button>
+        }
       </div>
     </section>
   </div>
