create book component

--- a/src/app/flights/components/flight-card/flight-card.component.html
+++ b/src/app/flights/components/flight-card/flight-card.component.html
@@ -66,6 +66,7 @@
       pButton
       label="Book"
       class="w-full min-w-[162px] !rounded-lg !bg-[#0A1D3D] !text-white !border-transparent hover:!bg-[#0B0A0D] transition-colors duration-300"
+      [routerLink]="['/book', flight()?.id]"
     ></button>
   </div>
 </div>
