--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,10 @@
 <header class="app-header">
   <div class="header-content">
-    <img src="assets/images/Logo.svg" alt="Logo" />
+    <img
+      src="assets/images/Logo.svg"
+      alt="Logo"
+      class="cursor-pointer"
+      [routerLink]="['/']"
+    />
   </div>
 </header>
