apply data service to use in page components

--- a/src/app/travelers/pages/traveler-page/traveler-page.component.html
+++ b/src/app/travelers/pages/traveler-page/traveler-page.component.html
@@ -111,7 +111,7 @@
           <div>
             <label class="text-sm block mb-1 text-[#898390]">Citizenship</label>
             <p-dropdown
-              [options]="citizenships"
+              [options]="citizenship"
               formControlName="citizenship"
               class="w-full"
               placeholder="Select Citizenship"
