--- a/src/app/flights/components/flight-card/flight-card.component.html
+++ b/src/app/flights/components/flight-card/flight-card.component.html
@@ -60,10 +60,10 @@
 
   <div class="flex flex-col gap-6 text-center border-l border-[#E2E0E3] p-6">
     <div>
-      <div class="text-lg font-semibold">
+      <div class="text-lg font-semibold text-[#0A1D3D]">
         {{ flight()?.price | currency }}
       </div>
-      <div class="text-xs text-gray-500">Per adult</div>
+      <div class="text-sm text-[#898390]">Per adult</div>
     </div>
     <button
       pButton
