--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,7 @@
-<header class="app-header">
-  <div class="header-content">
+<header class="border-b border-[#E2E0E3]">
+  <div
+    class="max-w-[1440px] h-full mx-auto py-[22px] px-[80px] flex items-center justify-between"
+  >
     <img
       src="assets/images/Logo.svg"
       alt="Logo"
