--- a/src/app/travelers/pages/traveler-page/traveler-page.component.html
+++ b/src/app/travelers/pages/traveler-page/traveler-page.component.html
@@ -5,7 +5,7 @@
 
       <form [formGroup]="travelerForm" class="space-y-4">
         <div
-          class="border rounded-lg p-4 bg-white border-[#E2E0E3] flex flex-col gap-4"
+          class="border rounded-lg p-4 bg-white border-[#E2E0E3] flex flex-col gap-4 mt-3"
         >
           <h3 class="text-md text-[#0A1D3D] font-semibold">
             Traveler 1: Adult
